--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="post">
               <h1>this is the title, atractive and interesting from the post</h1>
               <p>y este es el parrafo de inicio donde vamos a explicar las cosas con ramas</p>
-
+                <p>activo en la jugada el que se quedo pegado se quedo pegado</p>
             </div>  
         </div>  
     </body>
