--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza </span>
+                <span id="tagline">Tu blog de marihuana </span>
             </div>
             <div id="post">
               <h1>this is the title, atractive and interesting from the post</h1>
