--- a/blogpost.html
+++ b/blogpost.html
@@ -1,13 +1,13 @@
 <html>
     <head>
-        <title>El titulo del post</title>
+        <title>El titulo del post y demas</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de marihuana </span>
+                <span id="tagline">Tu blog de amigos </span>
             </div>
             <div id="post">
               <h1>this is the title, atractive and interesting from the post</h1>
